# owney

./: .gitignore  ACME_HTTPS_SETUP.md  API_IMPLEMENTATION_GUIDE.md  AUTH_API_SUMMARY.md  AUTH_IMPLEMENTATION_STATUS.md  AUTH_INTEGRATION_GUIDE.md  CLAUDE.md  Cargo.toml  Dockerfile  HTTPS_INTEGRATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PASSWORDLESS_AUTH.md  PASSWORDLESS_IMPLEMENTATION_SUMMARY.md  README.md  SETUP_UI.md  UI_ARCHITECTURE.md  UI_QUICK_START.md  deny.toml  mailserver.toml
.github/workflows/: ci.yml  fuzz.yml  release.yml  site.yml
crates/jmap-core/: CHANGELOG.md  Cargo.toml  README.md
crates/jmap-core/examples/: simple_server.rs
crates/jmap-core/src/: envelope.rs  lib.rs  refs.rs  session.rs
crates/ms-ai/: Cargo.toml
crates/ms-ai/src/: lib.rs  skills.rs  worker.rs
crates/ms-ai/tests/: enrichment.rs
crates/ms-api/: Cargo.toml
crates/ms-api/src/: lib.rs  push.rs
crates/ms-api/tests/: http.rs
crates/ms-authn/: Cargo.toml
crates/ms-authn/src/: cache.rs  lib.rs
crates/ms-authn/tests/: verify.rs
crates/ms-backup/: Cargo.toml
crates/ms-backup/src/: lib.rs
crates/ms-core/: Cargo.toml
crates/ms-core/src/: config.rs  error.rs  id.rs  lib.rs  time.rs
crates/ms-delivery/: Cargo.toml
crates/ms-delivery/src/: dkim.rs  lib.rs  worker.rs
crates/ms-delivery/tests/: loopback.rs
crates/ms-doctor/: Cargo.toml
crates/ms-doctor/src/: lib.rs
crates/ms-events/: Cargo.toml
crates/ms-events/src/: lib.rs
crates/ms-jmap-mail/: Cargo.toml
crates/ms-jmap-mail/src/: lib.rs
crates/ms-jmap-mail/tests/: mail_methods.rs
crates/ms-mcp/: Cargo.toml
crates/ms-mcp/src/: lib.rs  service.rs
crates/ms-mcp/tests/: protocol.rs
crates/ms-pgp/: Cargo.toml
crates/ms-pgp/src/: autocrypt.rs  lib.rs  ops.rs  pipeline.rs
crates/ms-pgp/tests/: pipeline.rs
crates/ms-setup/: Cargo.toml
crates/ms-setup/src/: check.rs
crates/ms-smtp-in/: Cargo.toml
crates/ms-smtp-in/src/: lib.rs  session.rs
crates/ms-smtp-in/tests/: session.rs  starttls.rs
crates/ms-storage/: Cargo.toml
crates/ms-storage/src/: ai_store.rs  blob.rs  db.rs  error.rs  ingest.rs  keys.rs  lib.rs  mail_queries.rs  migrations.rs  pgp_store.rs  queue.rs  tokens.rs
crates/ms-update/: Cargo.toml
crates/ms-update/src/: lib.rs
crates/owney-acme/: Cargo.toml
crates/owney-acme/src/: acme.rs  dns.rs  error.rs  lib.rs  provider.rs
crates/owney-ai/: Cargo.toml
crates/owney-ai/src/: ics.rs  lib.rs  nl_search.rs  provider.rs  skills.rs  worker.rs
crates/owney-ai/tests/: enrichment.rs
crates/owney-api/: Cargo.toml
crates/owney-api/src/: auth.rs  background_worker.rs  calendar_sync.rs  challenge_store.rs  fed_apply.rs  fed_sig.rs  fed_worker.rs  federation.rs  https.rs  lib.rs  push.rs  renewal.rs  wellknown.rs
crates/owney-api/src/oidc/: authorize.rs  consent.rs  discovery.rs  e2e_tests.rs  enroll.rs  flow_tests.rs  keys.rs  login.html  mod.rs  session.rs  token.rs
crates/owney-api/src/schedule/: ics.rs  mail.rs  mod.rs  rate_limit.rs  slots.rs
crates/owney-api/static/: index.html
crates/owney-api/static/assets/: index-BuSO3Wwg.css  index-CEcPGyvi.js
crates/owney-api/tests/: federation_e2e.rs  http.rs  oidc_http.rs  scheduling_http.rs
crates/owney-authn/: Cargo.toml
crates/owney-authn-v2/: Cargo.toml
crates/owney-authn-v2/src/: approval.rs  error.rs  lib.rs  passkey.rs  qr.rs  recovery.rs
crates/owney-authn/src/: lib.rs
crates/owney-authn/tests/: verify.rs
crates/owney-backup/: Cargo.toml
crates/owney-backup/src/: lib.rs
crates/owney-core/: Cargo.toml
crates/owney-core/src/: config.rs  id.rs  lib.rs
crates/owney-delivery/: Cargo.toml
crates/owney-delivery/src/: dkim.rs  lib.rs  router.rs  worker.rs
crates/owney-delivery/tests/: loopback.rs
crates/owney-doctor/: Cargo.toml
crates/owney-doctor/src/: lib.rs
crates/owney-events/: Cargo.toml
crates/owney-events/src/: lib.rs  ws_events.rs
crates/owney-imap/: Cargo.toml  README.md
crates/owney-imap/src/: commands.rs  lib.rs  server.rs  session.rs
crates/owney-jmap-mail/: Cargo.toml
crates/owney-jmap-mail/src/: attribute_methods.rs  calendar_methods.rs  lib.rs  scheduling_methods.rs
crates/owney-jmap-mail/tests/: mail_methods.rs
crates/owney-mcp/: Cargo.toml
crates/owney-mcp/src/: lib.rs  service.rs
crates/owney-mcp/tests/: protocol.rs
crates/owney-pgp/: Cargo.toml
crates/owney-pgp/src/: lib.rs  ops.rs  pipeline.rs  wkd.rs
crates/owney-pgp/tests/: pipeline.rs
crates/owney-search/: Cargo.toml
crates/owney-search/src/: lib.rs
crates/owney-setup/: Cargo.toml
crates/owney-setup/src/: lib.rs
crates/owney-smtp-in/: Cargo.toml
crates/owney-smtp-in/src/: lib.rs  server.rs  session.rs
crates/owney-smtp-in/tests/: session.rs  starttls.rs
crates/owney-spam/: Cargo.toml
crates/owney-spam/src/: bayes.rs  dnsbl.rs  lib.rs  rules.rs
crates/owney-storage/: Cargo.toml
crates/owney-storage/src/: ai_store.rs  aliases.rs  attributes.rs  blob.rs  calendar.rs  calendar_sharing.rs  chat_preferences.rs  contacts.rs  db.rs  error.rs  federation_store.rs  ingest.rs  lib.rs  mail_queries.rs  migrations.rs  oauth.rs  passwordless.rs  pgp_store.rs  queue.rs  scheduling.rs  search.rs  spam_store.rs  tokens.rs
crates/owney-update/: Cargo.toml
crates/owney-update/src/: lib.rs
docs/: BETA-LAUNCH.md  CALENDAR_FEDERATION.md  CALENDAR_FEDERATION_ROADMAP.md  CALENDAR_IMPLEMENTATION_SUMMARY.md  CALENDAR_PHASE_2_5_SUMMARY.md  CALENDAR_SYNC_INTEGRATION.md  CALENDAR_SYNC_PROTOCOL.md  CODE_REVIEW_2026-07-13.md  GETTING-STARTED.md  HARDENED-2026-07-11.md  LOCAL_TESTING.md  OIDC.md  PLAN.md  POSTMORTEM_2026-07-13.md  SCHEDULING.md  SERVER_ATTRIBUTES.md  SETUP.md  USAGE.md
docs/plans/: 2026-07-11-jmap-core-hardening.md  2026-07-11-whole-repo-hardening.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: jmap_parse.rs  mime_parse.rs  pgp_parse.rs  smtp_parse.rs
scripts/: demo-m6.sh  lab.sh  setup-dns.sh  setup-s3-backup.sh
site/: index.html  install.sh
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  api.ts  index.css
(+2 files in other folders)
