[package]
name = "jmap-core-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
smtp-proto = "0.2"
mail-parser = "0.11"
sequoia-openpgp = { version = "2.4", default-features = false, features = ["crypto-rust", "compression"] }
serde_json = "1.0"

[dependencies.jmap-core]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "smtp_parse"
path = "fuzz_targets/smtp_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mime_parse"
path = "fuzz_targets/mime_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pgp_parse"
path = "fuzz_targets/pgp_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jmap_parse"
path = "fuzz_targets/jmap_parse.rs"
test = false
doc = false
bench = false
