[package]
name = "ms-api"
description = "HTTP layer: JMAP session/api endpoints, bearer-token auth, health"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
jmap-core = { workspace = true }
ms-core = { workspace = true }
ms-delivery = { workspace = true }
ms-events = { workspace = true }
ms-mcp = { workspace = true }
ms-pgp = { workspace = true }
ms-storage = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
