[package]
name = "ms-core"
description = "Domain types, ids, config schema, and error taxonomy shared by every crate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
