[package]
name = "ms-delivery"
description = "Outbound mail: DKIM signing, durable queue worker, MX routing, retries and bounces"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ms-core = { workspace = true }
ms-events = { workspace = true }
ms-pgp = { workspace = true }
ms-storage = { workspace = true }
base64 = { workspace = true }
hickory-resolver = { workspace = true }
mail-auth = { workspace = true }
mail-send = { workspace = true }
rsa = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
ms-authn = { workspace = true }
ms-smtp-in = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
