[package]
name = "ms-events"
description = "Typed in-process event bus: storage changes fan out to push, webhooks, and AI workers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ms-core = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
