[package]
name = "ms-pgp"
description = "PGP-native core: key lifecycle, encrypt/sign/decrypt/verify, WKD hashing, Autocrypt headers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
ms-core = { workspace = true }
ms-storage = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
mail-parser = { workspace = true }
sequoia-openpgp = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ms-events = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
