[package]
name = "ms-update"
description = "Safe self-update: binary verification, migration dry-run, atomic swap"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ms-core = { workspace = true }
ms-events = { workspace = true }
ms-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
