[package]
name = "owney-ai"
description = "The AI layer: pluggable providers (Claude default), on-arrival skills, auditable and undoable actions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
owney-core = { workspace = true }
owney-events = { workspace = true }
owney-storage = { workspace = true }
mail-parser = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
