[package]
name = "owney-api"
description = "HTTP layer: JMAP session/api endpoints, bearer-token auth, health"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
jmap-core = { workspace = true }
owney-acme = { workspace = true }
owney-authn-v2 = { workspace = true }
owney-core = { workspace = true }
owney-delivery = { workspace = true }
owney-events = { workspace = true }
owney-mcp = { workspace = true }
owney-pgp = { workspace = true }
owney-storage = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"
base64 = { workspace = true }
blake3 = { workspace = true }
sequoia-openpgp = { workspace = true }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
mime_guess = "2.0"
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono-tz = "0.10"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
rsa.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
owney-events = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
owney-ai = { path = "../owney-ai" }
mail-parser = { workspace = true }
webauthn-authenticator-rs = { version = "0.5", features = ["softpasskey", "softtoken"] }
url = "2.5.8"

[lints]
workspace = true
