[package]
name = "owney-authn-v2"
description = "Passwordless authentication: WebAuthn passkeys, cross-device approval, recovery codes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

# WebAuthn / Passkeys. The registration/authentication state objects must be
# serialisable so they can round-trip through the API challenge store.
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Cryptography
sha2 = "0.10"

# Token generation
rand = "0.8"
hex = "0.4"

# QR codes
qrcode = "0.14"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
