[package]
name = "owney-backup"
description = "Backup and restore: full logical snapshots (SQL dump + encrypted blob tarball)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
owney-core = { workspace = true }
owney-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tar = { workspace = true }
zstd = "0.13"
blake3 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
rusqlite = { workspace = true }
tempfile = { workspace = true }

# AWS S3
aws-config = "1.4"
aws-sdk-s3 = "1.45"

# Encryption
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
