[package]
name = "owney-doctor"
description = "Continuous health monitoring: DNS drift, cert expiry, queue health, DB integrity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
owney-core = { workspace = true }
owney-delivery = { workspace = true }
owney-events = { workspace = true }
owney-setup = { workspace = true }
owney-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[lints]
workspace = true
