[package]
name = "owney-doctor"
description = "Continuous health monitoring: DNS drift, cert expiry, queue health, DB integrity"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
owney-core = { workspace = true }
owney-events = { workspace = true }
owney-storage = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
