[package]
name = "owney-mcp"
description = "Model Context Protocol server: mailbox tools for AI agents, over the same service layer as JMAP"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
owney-ai = { workspace = true }
owney-core = { workspace = true }
owney-delivery = { workspace = true }
owney-storage = { workspace = true }
mail-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
owney-events = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
