[package]
name = "owney-search"
description = "Full-text search via tantivy for emails"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
tantivy = "0.19"
zstd-safe = "5.0"
owney-core = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
