[package]
name = "owney-smtp-in"
description = "Inbound SMTP: session state machine over smtp-proto, recipient validation, delivery hand-off"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
owney-core = { workspace = true }
smtp-proto = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true, features = ["io-util", "test-util"] }

[lints]
workspace = true
